--- a/docker1-compose.yaml
+++ b/docker1-compose.yaml
@@ -14,9 +14,9 @@ services:
 
   digital-app:
     image: muralisocial123/digital-bank:1.1.0
-    container_name: digi-app
+    container_name: digi-app-new
     ports: 
-      - "4546:4545"
+      - "4547:4545"
   cart-app:
     image: muralisocial123/devsecops-cart:v1
     container_name: cart-app
